--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+.navbar{
+    background-color: rgb(238, 238, 238);
+}
+li.nav-item{
+    margin: 0 20px;
+    text-transform: uppercase;
+    font-size: 13px;
+}
 
-@media (max-width: 575.98px) {  }
+
+@media (max-width: 575.98px) { 
+    
+ }
 
 
 @media (min-width: 576px) and (max-width: 767.98px) {  }
