--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 *{
     padding: 0;
     margin: 0;
+    
 }
-
 .col-12{
     padding: 0;
 }
 .navbar{
-    background-color: rgb(255, 255, 255);;
+    background-color: rgb(255, 255, 255);
+    font-family: roboto;
 }
 li.nav-item{
     margin: 0 20px;
@@ -17,10 +18,10 @@ li.nav-item{
 }
 .thongtin1{
     width: 100%;
-
     background-color:#d24150;
     position: relative;
     z-index: 1;
+    font-family: roboto;
 }
 .thongtin1::before{
     content: "";
@@ -48,28 +49,27 @@ li.nav-item{
     margin: auto;
     margin-bottom: 30px;
 }
-
 .content_tt{
     z-index: 2;
     position: relative;
     padding-top: 15%;
 }
-
 .content_tt h2{
     color: aliceblue;
     margin-top: 35px;
     text-transform: uppercase;
     font-size: 41px;
 }
-.timeline{
-    color: #d83142;
-    margin-bottom: 15px;
+.edu{
+    font-family: roboto;
 }
-.content_edu h3{
-    font-size: 22px;
+.edu h4{
+    font-size: 18px;
+    color: #d65562;
 }
-.picture_edu{
-    width: 100%;
+.content_edu{
+    width: 80%;
+    margin: auto;
 }
 @media (min-width: 576px) { 
     .content_tt a{
@@ -79,7 +79,7 @@ li.nav-item{
         margin-bottom: 50px;
     }
     .content_tt p{
-        width: 80%;
+        width: 70%;
     }
     .content_tt img{
         width: 230px;
@@ -121,6 +121,7 @@ li.nav-item{
         max-width: 120px;
         border-radius: 50%; 
     }
+   
 }
 
 @media (min-width: 1200px) { 
