--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,9 @@ li.nav-item{
 }
 .content_tt a{
     width: 120px;
-    background-color: black;
     border: none;
     margin-bottom: 50px;
+    background-color: black;
 }
 .content_tt p{
     font-size: 16px;
@@ -68,15 +68,45 @@ li.nav-item{
     color: #d65562;
 }
 .content_edu{
-    width: 80%;
+    width: 78%;
     margin: auto;
+}
+span.time{
+    font-size: 12px;
+}
+.roller{
+    width: 24px;
+    height: 42px;
+    border: black solid 1px;  
+    border-radius: 35%;
+    z-index: 3;
+    position: absolute;
+    left: 50%;
+    bottom: 1%;
+    cursor: pointer;
+    transition: 0.4;
+    margin-left: -13px;
+}
+.roller:after{
+    content: "";
+    width: 3px;
+    height: 8px;
+    background-color: black;   
+    position: absolute;
+    left: 50%;
+    top: 18%;
+    margin-left: -2px;
+}
+.roller:hover{
+    width: 26px;
+    height: 45px;
 }
 @media (min-width: 576px) { 
     .content_tt a{
         width: 120px;
         background-color: black;
         border: none;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
     }
     .content_tt p{
         width: 70%;
@@ -121,13 +151,8 @@ li.nav-item{
         max-width: 120px;
         border-radius: 50%; 
     }
-   
 }
-
 @media (min-width: 1200px) { 
-    a.navbar-brand {
-        padding-left: 20px;
-    }
     .content_tt img{
         max-width: 150px;
         border-radius: 50%; 
@@ -135,8 +160,5 @@ li.nav-item{
 }
 
 @media (min-width: 1400px) { 
-    a.navbar-brand {
-        padding-left: 20px;
-    } 
    
 }
