--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ span.time{
 }
 .contact{
     background-color: #d65562 ;
+    margin-top: 15px;
 }
 .contact button{
     width: 12%;
@@ -124,31 +125,7 @@ form input,textarea {
     background-color: black;
     
 }
-/*portfolio*/
 
-  
-  /* clear fix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-  
-  /* ---- .grid-item ---- */
-  
-.grid-sizer,
-.grid-item {
-    width: 100%;
-    padding: 0px;
-    
-}
-.grid-item {
-    float: left;
-  }
-.grid-item img {
-    display: block;
-    width: 100%;
-  }
 .info{
       height: 45px;
       
@@ -175,11 +152,7 @@ form input,textarea {
     .content_tt img{
         width: 230px;
         border-radius: 50%;
-    }
-    .grid-sizer,
-    .grid-item {
-      width: 50%;
-    }
+    }  
     .infos{
         margin-left: 30px;
     }
@@ -200,13 +173,11 @@ form input,textarea {
         position: relative;
         padding-top: 11%;
     }
-    .grid-sizer,
-    .grid-item {
-        width: 33.3%;
-    }
+    
     .infos{
         margin-left: -68px;
     }
+    
 }
 
 @media (min-width: 992px) {  
@@ -226,10 +197,7 @@ form input,textarea {
         max-width: 120px;
         border-radius: 50%; 
     }
-    .grid-sizer,
-    .grid-item {
-        width: 25% ;
-    }
+    
     
 }
 @media (min-width: 1200px) { 
