--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -22,7 +22,7 @@
 .grid-sizer,
 .grid-item {
     width: 100%;
-    padding: 0px;
+    padding-bottom: 1px;
     
 }
 .grid-item {
@@ -41,6 +41,9 @@
     .grid-item {
       width: 50%;
     }
+    .grid-item {
+        padding: 0.5px;
+    }
  }
 
 @media (min-width: 768px) {  
@@ -49,13 +52,13 @@
         width: 33.3%;
         padding: 0.5px;
     }
+    
 }
 
 @media (min-width: 992px) {  
     .grid-sizer,
     .grid-item {
-        max-width: 25% ;
-        
+        max-width: 25% ;      
     }
 }
 
