--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,22 @@ form input,textarea {
     padding-bottom: 25px;
 }
 .tt b{color: antiquewhite;}
+.loading{
+    width: 30px;
+    height: 30px;
+    border: 5px solid rgba(23, 169, 189);
+    border-radius: 100%;
+    border-right: 1px solid transparent;
+    animation: spinner 1.5s infinite linear;
+    margin: 0 auto;
+    
+}
+@keyframes spinner {
+    
+    to{
+        transform: rotate(360deg);
+    }
+}
 @media (min-width: 576px) { 
     .content_tt a{
         width: 120px;
